--- a/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
+++ b/frontend/src/app/component/mascota/registrar-mascota/registrar-mascota.html
@@ -11,30 +11,35 @@
 
     <form (ngSubmit)="submit()">
 
+
+      <!-- Nombre -->
       <div class="form-group">
         <label>Nombre de la mascota</label>
         <input type="text" [(ngModel)]="nombre" name="nombre" required />
+        <div class="error-text" *ngIf="errores.nombre">{{ errores.nombre }}</div>
       </div>
 
+      <!-- Tamaño -->
       <div class="form-group">
         <label>Tamaño (cm)</label>
-        <input
-          type="number"
-          [(ngModel)]="tamanio"
-          name="tamanio"
-          required
-        />
+        <input type="number" [(ngModel)]="tamanio" name="tamanio" required />
+        <div class="error-text" *ngIf="errores.tamanio">{{ errores.tamanio }}</div>
       </div>
 
+      <!-- Color -->
       <div class="form-group">
         <label>Color</label>
         <input type="text" [(ngModel)]="color" name="color" />
+        <div class="error-text" *ngIf="errores.color">{{ errores.color }}</div>
       </div>
 
+      <!-- Descripción -->
       <div class="form-group">
         <label>Descripción</label>
         <textarea [(ngModel)]="descripcionExtra" name="descripcionExtra"></textarea>
+        <div class="error-text" *ngIf="errores.descripcion">{{ errores.descripcion }}</div>
       </div>
+
 
       <div class="form-group">
         <label>Foto de referencia</label>
