--- a/frontend/src/app/component/mascota/editar-mascota-perdida/editar-mascota-perdida.css
+++ b/frontend/src/app/component/mascota/editar-mascota-perdida/editar-mascota-perdida.css
@@ -3,7 +3,8 @@
   max-width: 700px;
   margin: 30px auto;
   padding: 20px;
-  background-color: #f9f9f9; /* fondo suave */
+  background-color: #f9f9f9;
+  /* fondo suave */
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
