--- a/frontend/src/app/component/login/login.html
+++ b/frontend/src/app/component/login/login.html
@@ -105,7 +105,7 @@
                             <input type="checkbox">
                             <span>Recordarme</span>
                         </label>
-                        <a href="#" class="forgot-link">¿Olvidaste tu contraseña?</a>
+                        <a routerLink="/forgot-password" class="forgot-link">¿Olvidaste tu contraseña?</a>
                     </div>
 
                     <button type="submit" class="btn-submit" [disabled]="isSubmitting">
