--- a/frontend/src/app/component/mascota/mis-mascotas/mis-mascotas.html
+++ b/frontend/src/app/component/mascota/mis-mascotas/mis-mascotas.html
@@ -55,7 +55,7 @@
           </div>
 
           <div *ngIf="modo === 'perdidas'" class="acciones-perdidas" (click)="$event.stopPropagation()">
-            <button class="btn-reportar">Reportar Avistamiento</button>
+            <button class="btn-reportar" (click)="irAReportarAvistamiento(mascota.id)">Reportar Avistamiento</button>
           </div>
         </div>
 
