agrego funcionalidad en home

--- a/frontend/src/app/component/home/home-hero/home-hero.css
+++ b/frontend/src/app/component/home/home-hero/home-hero.css
@@ -91,7 +91,8 @@
     }
 
     .hero-buttons {
-        justify-content: center;
+      margin: 0 auto;
+      display: block;
     }
 
     .hero-image {
