--- a/frontend/src/app/component/home/home-hero/home-hero.html
+++ b/frontend/src/app/component/home/home-hero/home-hero.html
@@ -5,10 +5,14 @@
             <p class="hero-subtitle">
                 Nuestra comunidad te ayuda a reunirte con tu mascota perdida de forma rápida y sencilla
             </p>
-            <div class="hero-buttons">
-                <button class="btn btn-primary btn-large">Buscar Mascotas</button>
-                <button class="btn btn-outline btn-large">Mascota Perdida</button>
-            </div>
+          <div class="hero-buttons">
+            <button
+              class="btn btn-primary btn-large"
+              routerLink="/mascotas/perdidas"
+            >
+              Mascota Perdida
+            </button>
+          </div>
         </div>
         <div class="hero-image">
             <img src="https://img.freepik.com/foto-gratis/ilustracion-3d-que-muestra-amistad-gatos-perros_23-2151483371.jpg?semt=ais_hybrid"
