--- a/frontend/src/app/component/mascota/detalle-mascota/detalle-mascota.html
+++ b/frontend/src/app/component/mascota/detalle-mascota/detalle-mascota.html
@@ -63,6 +63,8 @@
                 </div>
 
                 <div class="zona-dinamica-avistamientos mt-5">
+                    <h3>Historial de Avistamientos</h3>
+                    <hr>
                     <router-outlet></router-outlet>
                 </div>
             </div>
