correccion de mapa

--- a/frontend/src/app/component/mascota/mis-mascotas/mis-mascotas.html
+++ b/frontend/src/app/component/mascota/mis-mascotas/mis-mascotas.html
@@ -40,7 +40,7 @@
         <div class="info">
           <h3>{{ mascota.nombre }}</h3>
 
-          <p><strong>Barrio:</strong> {{ mascota.coordenada.barrio }}</p>
+          <p><strong>Ciudad:</strong> {{ mascota.coordenada.barrio }}</p>
           <p><strong>Color:</strong> {{ mascota.color }}</p>
           <p *ngIf="mascota.descripcionExtra" class="descripcion">{{ mascota.descripcionExtra }}</p>
 
